Updated to work with SSL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.data.rest.base-path=/api
+
+server.port=8443
+server.ssl.key-store=classpath:certs/testCert.trabilis.com.p12
+server.ssl.key-store-password=password
+server.ssl.trust-store=classpath:certs/TrabilisAuthorities.jks
+server.ssl.trust-store-password=password
+server.ssl.client-auth=need
